--- a/.github/workflows/keylime-bot.yml
+++ b/.github/workflows/keylime-bot.yml
@@ -52,5 +52,6 @@ jobs:
     steps:
       - uses: actions-automation/pull-request-responsibility@main
         with:
+          actions: "request,assign,copy-labels-linked"
           reviewers: "core"
           num_to_request: 3
